Fixing bug when using it on Node.js. package.json was with an wrong path to source file. Fixing README.md to reflect the changes.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checkforce.js",
   "version": "1.0.0",
   "description": "A library that helps to perform tasks to test strength of passwords",
-  "main": "checkforce.js",
+  "main": "src/checkforce.js",
   "scripts": {
     "test": "./node_modules/.bin/jasmine-node ./test"
   },
