--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "checkforce.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A library that helps to perform tasks to test strength of passwords",
   "main": "src/checkforce.js",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node ./test"
+    "test": "./node_modules/.bin/jasmine-node ./test",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,17 @@
   },
   "homepage": "https://github.com/dejaneves/checkforce.js#readme",
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
     "express": "^4.14.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.16.0"
   }
 }
