--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
   },
   "homepage": "https://github.com/dejaneves/checkforce.js#readme",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "express": "^4.14.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "jasmine-node": "^1.14.5",
-    "webpack": "^1.13.3"
+    "webpack": "^4.26.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0"
