--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library that helps to perform tasks to test strength of passwords",
   "main": "dist/checkforce.min.js",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node ./test",
+    "test": "karma start --single-run",
     "build": "webpack"
   },
   "repository": {
@@ -25,6 +25,11 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "jasmine-node": "^1.14.5",
+    "karma": "^3.1.3",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^3.0.5",
+    "mocha": "^5.2.0",
     "webpack": "^4.26.1"
   },
   "dependencies": {
