--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
-    "webpack": "^4.26.1"
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.3.7"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0"
