--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "checkforce.js",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "description": "A library that helps to perform tasks to test strength of passwords",
   "main": "dist/checkforce.min.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "webpack",
-    "test": "karma start --single-run"
+    "test": "karma start --single-run",
+    "start": "webpack serve --open",
+    "watch": "webpack --watch --env BUNDLE=true",
+    "build": "webpack --env BUNDLE=true",
+    "build-standalone": "webpack --env BUNDLE=false",
+    "build-minify": "webpack --env BUNDLE=true --env MINIFY=true",
+    "build-minify-standalone": "webpack --env BUNDLE=false --env MINIFY=true"
   },
   "repository": {
     "type": "git",
@@ -18,24 +22,19 @@
     "url": "https://github.com/dejaneves/checkforce.js/issues"
   },
   "homepage": "https://github.com/dejaneves/checkforce.js#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "dotenv": "^8.1.0",
-    "express": "^4.14.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "jasmine-node": "^1.14.5",
-    "karma": "^3.1.3",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-webpack": "^3.0.5",
-    "mocha": "^5.2.0",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.3.7"
+  "peerDependencies": {
+    "@popperjs/core": "^2.11.2",
+    "zxcvbn": "^4.4.2"
   },
-  "dependencies": {
-    "babel-polyfill": "^6.16.0"
-  }
+  "devDependencies": {
+    "@babel/core": "^7.17.4",
+    "@babel/preset-env": "^7.16.11",
+    "@popperjs/core": "^2.11.2",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "zxcvbn": "^4.4.2"
+  },
+  "dependencies": {}
 }
