--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "checkforce.js",
-  "version": "3.0.0",
+  "version": "3.0.0-alpha1",
   "description": "A library that helps to perform tasks to test strength of passwords",
   "main": "dist/checkforce.min.js",
   "scripts": {
